--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ input[type="submit"]:hover{
 }
 
 div.msg-erro{
-    width: 400px;
+    width: 250px;
     margin: 10px auto;
     padding: 10px;
-    background-color: rgba(212, 37, 17, 0.3);
+    background: rgba(212, 37, 17, 0.3);
     border: 1px solid rgb(160, 10, 10);
-    color: #080708;
+    color: #fff;
 }
