--- a/style.css
+++ b/style.css
@@ -4,66 +4,67 @@
 
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #49306B;   
-    font-family: var(--font-primary); 
+    background-color: #49306B;
+    font-family: var(--font-primary);
     border: none;
-    
+
 }
 
-:root{
+:root {
     --font-primary: "Open Sans", sans-serif;
 }
 
-.main-container{
+.main-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 4%;
 }
 
-.main-container{
+.main-container {
     text-align: center;
     margin-bottom: 25px;
     margin-left: 15%;
     font-size: 0.7rem;
 }
 
-.login{
+.login {
     width: 450px;
     margin-left: 20%;
     margin-top: 3%;
     margin-right: 50%;
     background-color: #fff;
     border-radius: 15px;
-    padding: 30px; /* espaçamento interno */
+    padding: 30px;
+    /* espaçamento interno */
     text-align: center;
-    
+
 }
 
-.main-container h1{
+.main-container h1 {
     text-transform: uppercase;
     margin-left: 23%;
     color: #fff;
 }
 
-input{
+input {
     width: 80%;
 }
 
-input{
+input {
     border-bottom: 2px solid #191919;
     padding: 15px;
     font-size: .7rem;
     margin-bottom: 20px;
-    outline: none;   
+    outline: none;
     background-color: #fff;
 }
 
-input:focus{
+input:focus {
     border-bottom: 2px solid #49306B;
 }
 
@@ -79,15 +80,15 @@ input[type="submit"] {
     width: 90%;
     padding: 8px;
     margin-top: 5%;
-    
+
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover {
     background-color: #49306B;
     transition: 0.3s;
 }
 
-div.msg-erro{
+div.msg-erro {
     width: 250px;
     margin: 10px auto;
     padding: 10px;
