--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,11 +8,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #49306B;
     font-family: var(--font-primary);
     border: none;
 
 }
+
+body {
+    background-color: #49306B;
+}
+
 
 :root {
     --font-primary: "Open Sans", sans-serif;
