--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -7,13 +7,13 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
     font-family: var(--font-primary);
     border: none;
 
 }
 
-body{
+body {
     background-color: #49306B;
 }
 
@@ -23,10 +23,10 @@ body{
 
 
 .main-container {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     margin-top: 2%;
-    
+
 }
 
 .main-container {
@@ -41,13 +41,13 @@ body{
     color: #fff;
 }
 
-div.bottons{
+div.bottons {
     font-family: var(--font-primary);
-    
+
 
 }
 
-div.bottons a{
+div.bottons a {
     text-transform: uppercase;
     text-decoration: none;
     background-color: #191919;
@@ -56,20 +56,48 @@ div.bottons a{
     border-radius: 20px;
     cursor: pointer;
     padding: 10px;
-   
+
 }
 
-div.dados-user{
+div.dados-user {
     margin-left: 15px;
     color: #49306B;
     font-weight: bold;
-    
+
 }
 
-div.container-user{
+div.container-user {
     width: 350px;
     padding: 30px;
     border-radius: 30px;
     box-shadow: 5px 5px 1px 1px rgba(0, 0, 0, 0.1);
-    background-color:white;
+    background-color: white;
+}
+
+div.formulario {
+    width: 350px;
+    padding: 50px;
+    margin-left: 200px;
+    margin-top: 15%;
+}
+
+input[type="number"] {
+    border: none;
+    outline: none;
+
+}
+
+input[type="submit"] {
+    font-family: var(--font-primary);
+    text-transform: uppercase;
+    background-color: #191919;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    height: 30px;
+    cursor: pointer;
+    width: 200px;
+    padding: 8px;
+    margin-top: 5%;
+
 }
